KBSを大規模書き換えするため，今の状態を保存